<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="baidumapkey">tGbCIbS9bK2X1GBoyoEe6lZw0gpZzHDz</string>
    <string name="jpushkey">194c5dbad019627f4688998d</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="more_message_count">99+</string>
    <string name="sercher">搜索</string>
    <string name="error_userid_and_pw_not_empty">用户名或密码不能为空</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="image_s">功能:图片</string>
    <string name="xxmc">青春重工</string>
    <string name="kbcolor">%1$s</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="school_title_name">学院通知</string>
    <string name="back">返回</string>
    <string name="friend_chat_title">好友消息</string>
    <string name="send">发送</string>
    <string name="username">账号</string>
    <string name="ykdl"><u>游客登录</u></string>
    <string name="login_btn_string"><u>登录</u></string>
    <string name="userpd">密码</string>
    <string name="rememberMe">记住密码</string>
    <string name="title_activity_wolact">联系人</string>
    <string name="login_title">智慧校园</string>
    <string name="title_activity_new_view">新闻</string>
    <string name="title_activity_message">通知</string>
    <string name="title_activity_message_list">通知列表</string>
    <string name="title_activity_nwolact">我的圈子</string>
    <string name="title_activity_multi_im">群聊天</string>
    <string name="title_activity_add">圈子添加</string>
    <string name="title_activity_add_input">好友添加</string>
    <string name="btnAdd">添加</string>
    <string name="btnDelete">删除</string>
    <string name="title_activity_main">标题</string>
    <string name="dialog_message">确认删除此条日志吗？</string>
    <string name="dialog_tonzhi">确认删除此条通知吗？</string>
    <string name="dialog_friend">确认删除该好友吗？</string>
    <string name="btnCancel">取消</string>
    <string name="btnOk">确定</string>
    <string name="title_activity_new_main">日志</string>
    <string name="title_activity_calendar">日历</string>
    <string name="title_activity_course">课程</string>
    <string name="help">帮助</string>
    <string-array name="planets_array">
        <item>设置</item>
        <item>退出</item>
    </string-array>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_obtain_token_via_sso_all_in_one">SSO 授权（ALL IN ONE）</string>
    <string name="weibosdk_demo_obtain_token_logout">用户登出</string>
    <string name="xndt_wdwz">我的位置</string>
    <string name="title_activity_visitor">Visitor</string>
    <string name="title_activity_stu_info_setup">Stu_info_setup</string>
    <string name="title_activity_dealfriend">DealfriendActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test1">Test1Activity</string>
    <string name="title_activity_d">DActivity</string>
    <string name="title_activity_t">TActivity</string>
    <string name="title_activity_w">WActivity</string>
    <string name="title_activity_lost_found">LostFoundActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="str_home_report">报告</string>
    <string name="str_home_apply">我的应用</string>
    <string name="str_home_home">首页</string>
    <string name="str_home_applymanage">管理</string>
    <string name="str_home_message">消息</string>
    <string name="str_home_personal">我的</string>
    <string name="str_home_evaluation">职业测评</string>
    <string name="str_home_aim">我的目标</string>
    <string name="str_home_aimhall">目标广场</string>
    <string name="str_home_graduate">我要毕业</string>
    <string name="str_home_study_plan">学习计划</string>
    <string name="str_home_mygrade">我的成绩</string>
    <string name="str_home_guakejinbao">挂科预警</string>
    <string name="str_home_everyday_aim">每日目标</string>
    <string name="str_home_breakfast">健康早餐</string>
    <string name="str_home_course_singir">课程签到</string>
    <string name="str_home_exercise">坚持运动</string>
    <string name="str_home_guiqing">按时归寝</string>
    <string name="str_home_myaim">自主目标</string>
    <string name="str_home_more">查看更多</string>
    <string name="str_home_apply_center">应用中心</string>
    <string name="title_activity_subscibe">订阅消息</string>
    <string name="str_activity_subscibe_searchhint">搜索</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_mydata">我的数据</string>
    <string name="title_activity_mysubscibe">我的订阅</string>
    <string name="title_activity_qr">我的二维码</string>
    <string name="title_activity_cp">修改密码</string>
    <string name="str_persona_title">我的</string>
    <string name="str_persona_share">我的分享</string>
    <string name="str_persona_ticket">我的抢票</string>
    <string name="str_persona_set">设置</string>
    <string name="str_persona_out">退出登录</string>
    <string name="str_uddatauserifno">修改资料</string>
    <string name="str_my_report">我的报告</string>
    <string name="str_userinfo_title">个人信息</string>
    <string name="str_userinfo_nickname">姓名:</string>
    <string name="str_userinfo_handname">头像</string>
    <string name="str_userinfo_birthday">生日:</string>
    <string name="str_userinfo_section">部门:</string>
    <string name="str_userinfo_major">专业:</string>
    <string name="str_userinfo_phone">手机:</string>
    <string name="str_userinfo_QQ">Q Q:</string>
    <string name="str_userinfo_erweima">二维码</string>
    <string name="str_userinfo_save">保存</string>
    <string name="str_set_title">设置</string>
    <string name="str_set_updatepwd">修改密码</string>
    <string name="str_updatapwd_content">修改密码请前往四川农业大学\n网上服务大厅办理</string>
    <string name="str_set_hide">隐私</string>
    <string name="str_set_feedback">意见反馈</string>
    <string name="str_set_about">关于</string>
    <string name="str_about_title">关于</string>
    <string name="str_about_score">去评分</string>
    <string name="str_about_function">功能介绍</string>
    <string name="str_about_notic">系统通知</string>
    <string name="str_about_complaint">投诉</string>
    <string name="str_about_title_v3">关于我们</string>
    <string name="str_about_versions_v3">智慧校园V3.0.0</string>
    <string name="str_message_title">消息通知</string>
    <string name="str_message_hint">接受消息通知</string>
    <string name="str_message_tips">要开启或停用,您可以在设置>通知中心>智慧校园中手动设置</string>
    <string name="str_report_title">我的报告</string>
    <string name="fr_title">好友申请</string>
    <string name="newfr_title">新的朋友</string>
    <string name="verify_title">身份验证</string>
    <string name="myclass_title">我的班级</string>
    <string name="sc_title">智慧课堂</string>
    <string name="str_feedback_title">意见反馈</string>
    <string name="str_feedback_slogan">亲爱的同学(老师):</string>
    <string name="str_feedback_content">您好!为了给你提供更好的服务，我们希望收集您使用APP时的建议或意见。对您的配合和支持表示衷心感谢!</string>
    <string name="str_feedback_problem">*您对数据报告的整体满意度如何？</string>
    <string name="str_feedback_verysatisfied">非常满意</string>
    <string name="str_feedback_satisfied">满意</string>
    <string name="str_feedback_commonly">一般</string>
    <string name="str_feedback_dissatisfied">不满意</string>
    <string name="str_feedback_verydissatisfied">非不满意</string>
    <string name="str_feedback_edthint">填写你的建议</string>
    <string name="str_feedback_contentone">我们会不定期邀请用户参与面对面的交流。如果您有意参与，请填写如下信息，方便我们与您联系，谢谢!</string>
    <string name="str_feedback_contenttwo">(信息仅作为内部资料绝不外泄)</string>
    <string name="str_feedback_phone">手机号:</string>
    <string name="str_feedback_phonehint"> 请输入你的手机号码</string>
    <string name="str_feedback_submit">提交</string>
    <string name="str_feedback_maxlength">最大字数为200</string>
    <string name="str_feedback_succeed">感谢你的支持,祝你生活愉快</string>
    <string name="str_feedback_error">提交失败,请稍后重试</string>
    <string name="feedback_suggest_content">*您的建议是我们最大的动力</string>
    <string name="feedback_phone_or_email_content">请留下您的手机或邮箱，我们会尽快给您反馈</string>
    <string name="loadcontent">玩命加载中&#8230;</string>
    <string name="str_feedback_content_not_null">内容不能为空</string>
    <string name="str_popwindhandim_photograph">拍照</string>
    <string name="str_popwindhandim_album">本地相册</string>
    <string name="str_popwindhandim_cancel">取消</string>
    <string name="str_added">已添加</string>
    <string name="str_agreed">同意</string>
    <string name="str_disagreed">已拒绝</string>
    <string name="str_error_network">网络异常</string>
    <string name="str_error_data">数据异常</string>
    <string name="str_fengxiang_mubiaohint">请输入你的目标内容</string>
    <string name="str_fengxiang_mubiao_btn">分享到目标广场</string>
    <string name="str_null">内容不能为空哦!</string>
    <string name="str_fengxiang_chenggong">分享成功</string>
    <string name="str_fengxiang_shibai">分享失败,稍后重试!</string>
    <string name="str_targetdetail_title">目标详情</string>
    <string name="str_morezizhumubiao">自主目标</string>
    <string name="str_jiankanzaochan_qiandao_succes">签到成功</string>
    <string name="str_jiankanzaochan_qiandao_error">签到失败</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="str_ready">入学准备</string>
    <string name="str_dalibao">新生大礼包</string>
    <string name="str_flow">报到流程</string>
    <string name="str_personaldata">个人资料</string>
    <string name="str_autonomy_report_title">自主报道</string>
    <string name="str_welcomestudent_title">掌上迎新</string>
    <string name="str_welcomestudent_noticebook">通知书</string>
    <string name="str_welcomestudent_allprocess">报到总进度</string>
    <string name="str_personaldata_userdetails">个人详情</string>
    <string name="str_personaldata_jiaoshichaxun">寝室查询</string>
    <string name="str_personaldata_xuefeichaxun">学费查询</string>
    <string name="str_personaldata_emschaxun">EMS查询</string>
    <string name="str_personaldata_tongzishu">电子通知书</string>
    <string name="str_flow_wangshang">网上迎新</string>
    <string name="str_flow_xianchang">迎新现场</string>
    <string name="str_flow_flowprsonage">报到总进度</string>
    <string name="str_personaldata_details_refillings">重新完善信息</string>
    <string name="str_dormitory_title">寝室信息</string>
    <string name="str_dormitory_schollname">校区名称</string>
    <string name="str_dormitory_scholl_classroom">校栋名称</string>
    <string name="str_dormitory_number">寝室名称</string>
    <string name="str_dormitory_type">寝室性别</string>
    <string name="str_dormitory_bednumber">床位号</string>
    <string name="str_dormitory_shoufeibiaozun">收费标准</string>
    <string name="str_back">返回</string>
    <string name="str_datainput_title">个人信息完善</string>
    <string name="srt_userinfocode_phonenumber">手机号码</string>
    <string name="str_userinfocode_phonenumbercode">验证码</string>
    <string name="str_userinfocode_sendcode">发送验证码</string>
    <string name="str_userinfocode_phonenumberhint">请输入手机号码</string>
    <string name="str_userinfocode_codehint">请输入验证码</string>
    <string name="str_next">下一步</string>
</resources>