<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <!-- 我要毕业 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/d_10"
        android:text="@string/str_home_graduate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_05"
        android:background="@color/color_persona_bggray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_home_study_plan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_10"
            android:layout_marginStart="@dimen/d_10"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:background="@drawable/selector_personal_click"
            android:drawableTop="@drawable/ico_home_study_plan"
            android:gravity="center"
            android:padding="@dimen/d_15"
            android:text="@string/str_home_study_plan" />

        <TextView
            android:id="@+id/txt_home_mygrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_10"
            android:layout_marginStart="@dimen/d_10"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:background="@drawable/selector_personal_click"
            android:drawableTop="@drawable/ico_home_mygrade"
            android:gravity="center"
            android:padding="@dimen/d_15"
            android:text="@string/str_home_mygrade" />

        <TextView
            android:id="@+id/txt_home_guakejinbao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_10"
            android:layout_marginStart="@dimen/d_10"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:background="@drawable/selector_personal_click"
            android:drawableTop="@drawable/ico_home_guakejinbao"
            android:gravity="center"
            android:padding="@dimen/d_15"
            android:text="@string/str_home_guakejinbao" />
    </LinearLayout>

    <!-- 每日目标 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/d_10"
        android:text="@string/str_home_everyday_aim" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_05"
        android:background="@color/color_persona_bggray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_home_course_singir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_5"
            android:layout_marginStart="@dimen/d_5"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:background="@drawable/selector_personal_click"
            android:drawableTop="@drawable/ico_home_course_singin"
            android:gravity="center"
            android:padding="@dimen/d_10"
            android:text="@string/str_home_course_singir" />

        <TextView
            android:id="@+id/txt_home_breakfast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_5"
            android:layout_marginStart="@dimen/d_5"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:background="@drawable/selector_personal_click"
            android:drawableTop="@drawable/ico_home_breakfast"
            android:gravity="center"
            android:padding="@dimen/d_10"
            android:text="@string/str_home_breakfast" />

        <TextView
            android:id="@+id/txt_home_exercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_5"
            android:layout_marginStart="@dimen/d_5"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:drawableTop="@drawable/ico_home_exercise"
            android:gravity="center"
            android:padding="@dimen/d_10"
            android:background="@drawable/selector_personal_click"
            android:text="@string/str_home_exercise" />

        <TextView
            android:id="@+id/txt_home_guiqing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_5"
            android:layout_marginStart="@dimen/d_5"
            android:layout_weight="1"
            android:drawablePadding="@dimen/d_5"
            android:drawableTop="@drawable/ico_home_guiqing"
            android:gravity="center"
            android:padding="@dimen/d_10"
            android:background="@drawable/selector_personal_click"
            android:text="@string/str_home_guiqing" />
    </LinearLayout>

</LinearLayout>