<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:visibility="visible"
    android:id="@+id/ly_zhuye_title"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/d_10"
            android:layout_marginTop="@dimen/d_10"
            android:text="@string/str_home_home"
            android:textColor="@color/color_white"
            android:textSize="@dimen/s_20" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layot_botton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFlipper"
        android:background="@color/color_darkgrey"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_home_aim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_gray"
            android:gravity="center"
            android:padding="@dimen/d_8"
            android:text="@string/str_home_aim"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/txt_home_aimhall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/d_8"
            android:text="@string/str_home_aimhall"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/txt_home_evaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/d_8"
            android:text="@string/str_home_evaluation"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>